--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -6,22 +6,20 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Dettaglio Account Privato</title>
-    <!-- Fonts and Icons -->
-    <!-- Design System Master (Titanium Gold v3.5) -->
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
-    <link rel="stylesheet" href="assets/css/titanium.css?v=3.5">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
+
+    <!-- Design System Master (Titanium Account V3.6) -->
+    <link rel="stylesheet" href="assets/css/auth_account.css?v=3.6">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
-
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <style>
-        .filled {
-            font-variation-settings: 'FILL' 1;
-        }
-    </style>
+    <script src="assets/js/titanium-config.js?v=3.6"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
 </head>
 
 <body class="titanium-bg antialiased overflow-x-hidden">
@@ -214,7 +212,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <div class="dashboard-grid-2 gap-4">
                             <div class="flex flex-col gap-1.5">
                                 <span class="view-label text-white/40 ml-1" data-t="phone">Telefono</span>
                                 <div
@@ -434,8 +432,8 @@
         Copiato!
     </div>
 
-    <script type="module" src="assets/js/main.js?v=3.5"></script>
-    <script type="module" src="assets/js/dettaglio_account_privato.js?v=3.5"></script>
+    <script type="module" src="assets/js/main.js?v=3.6"></script>
+    <script type="module" src="assets/js/dettaglio_account_privato.js?v=3.6"></script>
 </body>
 
 </html>
