--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -8,8 +8,13 @@
 
     <!-- Titanium Engine Stack -->
     <script src="assets/js/titanium-config.js?v=3.5"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
-    <script src="assets/js/titanium-core.js?v=3.5"></script>
     <script src="assets/js/ui-core.js?v=3.5"></script>
 
     <!-- PWA / Mobile Capable -->
@@ -36,7 +41,6 @@
                 <!-- SEZIONE 1: ACCESSO RAPIDO -->
                 <div class="grid-2-cols">
                     <a href="area_privata.html" class="matrix-blue border-glow" data-ui-section="privato">
-
                         <div class="bg-icon-container">
                             <span class="material-symbols-outlined titanium-icon-lg" role="img"
                                 aria-label="Icona Cassaforte Personale" data-t-aria="aria_private">lock</span>
@@ -48,7 +52,6 @@
                     </a>
 
                     <a href="lista_aziende.html" class="matrix-green border-glow" data-ui-section="azienda">
-
                         <div class="bg-icon-container">
                             <span class="material-symbols-outlined titanium-icon-lg" role="img"
                                 aria-label="Icona Gestione Aziendale" data-t-aria="aria_company">apartment</span>
@@ -70,14 +73,24 @@
                     <div class="box-content-main">
                         <div class="box-header-flex">
                             <div class="flex items-center gap-2 mb-1">
-                                <span id="urgent-count-badge" class="urgent-badge" style="opacity: 0; margin-left: 0;">
-                                    <span id="urgent-count">0</span>
+                                <span id="urgent-count-badge" class="urgent-badge loading-pulse"
+                                    style="margin-left: 0;">
+                                    <span id="urgent-count">---</span>
                                 </span>
                                 <h3 data-t="section_deadlines_title" style="margin-bottom: 0;">Scadenze</h3>
                             </div>
                             <p data-ui="hint" data-t="section_deadlines_desc">Controlla i prossimi impegni</p>
                         </div>
-                        <div id="deadline-list-container" class="dashboard-dynamic-list"></div>
+                        <div id="deadline-list-container" class="dashboard-dynamic-list">
+                            <div class="micro-list-item"
+                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
+                                <div class="skeleton-text" style="width: 80%;"></div>
+                            </div>
+                            <div class="micro-list-item"
+                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
+                                <div class="skeleton-text" style="width: 60%;"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -91,14 +104,24 @@
                     <div class="box-content-main">
                         <div class="box-header-flex">
                             <div class="flex items-center gap-2 mb-1">
-                                <span id="expired-count-badge" class="urgent-badge" style="opacity: 0; margin-left: 0;">
-                                    <span id="expired-count">0</span>
+                                <span id="expired-count-badge" class="urgent-badge loading-pulse"
+                                    style="margin-left: 0;">
+                                    <span id="expired-count">---</span>
                                 </span>
                                 <h3 data-t="section_urgencies_title" style="margin-bottom: 0;">Urgenze</h3>
                             </div>
                             <p data-ui="hint" data-t="section_urgencies_desc">Pratiche scadute</p>
                         </div>
-                        <div id="urgenze-list" class="dashboard-dynamic-list no-scrollbar"></div>
+                        <div id="urgenze-list" class="dashboard-dynamic-list no-scrollbar">
+                            <div class="micro-list-item"
+                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
+                                <div class="skeleton-text" style="width: 70%;"></div>
+                            </div>
+                            <div class="micro-list-item"
+                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
+                                <div class="skeleton-text" style="width: 50%;"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
