Refactor: Rimozione Tailwind CSS, consolidamento Protocollo Titanium V3.0 e rimozione CSS legacy

--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
-    <!-- Design System Master (Titanium Gold v3.8) -->
+    <!-- Design System Master (Titanium Matrix V3.8) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_account.css?v=3.8">
 
     <!-- Core Engine -->
