--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -23,13 +23,13 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
     <!-- Design System Master (Titanium Account Protocol V3.0) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.5"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
 
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 </head>
 
 <body class="titanium-bg antialiased">
