--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -13,14 +13,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="App Codici">
-    <!-- Tailwind CSS, Google Fonts, Material Symbols -->
+    <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <!-- Design System Master (Titanium Protocol V3.0) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
+    <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
     <style>
         body {
             background-color: #e2e8f0;
