--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
     <script src="assets/js/ui-core.js?v=3.5"></script>
 
