--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -18,7 +18,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
+    <!-- TITANIUM CORE & AUTH SYSTEM (Protocollo V3.0) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
     <!-- Core UI per Toast (Protocollo V3) -->
     <script type="module" src="assets/js/ui-core.js?v=2.2"></script>
