--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -17,81 +17,27 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <!-- Google Fonts: Inter -->
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap"
-        rel="stylesheet" />
-    <!-- Material Symbols -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-        rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
-    <script src="assets/js/tailwind-config.js"></script>
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <!-- Design System Master (Titanium Protocol V3.0) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
+    <link rel="stylesheet" href="assets/css/auth_account.css?v=3.7">
+
     <style>
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
         }
-
-        /* Custom scrollbar hiding for clean UI */
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }
-
-        body {
-            min-height: 100dvh;
-            background-color: #0a0f1e;
-        }
-
-        /* PUNTO LUCE A FARO (Standard Metodo A) */
-        .glass-glow {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 150%;
-            height: 120%;
-            background: radial-gradient(circle at 50% 0%,
-                    rgba(80, 150, 255, 0.6) 0%,
-                    rgba(80, 150, 255, 0) 60%);
-            filter: blur(80px);
-            opacity: 1;
-            pointer-events: none;
-            z-index: 0;
-            animation: glowFloat 5s ease-in-out infinite;
-        }
-
-        @keyframes glowFloat {
-            0% {
-                transform: translateX(-50%) translateY(-150px) scale(1);
-                opacity: 0.5;
-            }
-
-            50% {
-                transform: translateX(-50%) translateY(100px) scale(1.4);
-                opacity: 1;
-            }
-
-            100% {
-                transform: translateX(-50%) translateY(-150px) scale(1);
-                opacity: 0.5;
-            }
-        }
     </style>
 </head>
 
-<body class="bg-[#0a0f1e] text-white font-display overflow-x-hidden antialiased">
-    <div
-        class="relative flex h-full min-h-screen w-full flex-col w-full md:max-w-3xl lg:max-w-5xl mx-auto shadow-2xl overflow-hidden bg-gradient-to-l from-[#030712] to-[#162e6e]">
-
-        <!-- GLOW LAYER (Animated) -->
+<body class="antialiased">
+    <div class="titanium-box">
+        <!-- Faro Estetico -->
         <div class="glass-glow"></div>
 
         <!-- Header (Fixed Glass) -->
