--- a/Frontend/public/modifica_account_privato.html
+++ b/Frontend/public/modifica_account_privato.html
@@ -6,30 +6,25 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Modifica Account Privato</title>
-    <!-- Design System Master (Titanium Gold v3.5) -->
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <!-- Design System Master (Titanium Protocol V3.0) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
-    <link rel="stylesheet" href="assets/css/titanium.css?v=3.5">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.5"></script>
     <script src="assets/js/titanium-core.js?v=3.5"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
 
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
-        body {
-            background-color: #0a0f1e;
-            color: #f8fafc;
-        }
-
-        .glass-header {
-            background: rgba(10, 15, 30, 0.8);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-        }
-
-        /* Form Controls Overrides */
+        /* Form Controls Overrides per stile Legacy-to-V3 */
         input[type="text"],
         input[type="email"],
         input[type="password"],
@@ -46,16 +41,6 @@
             border-color: #3b82f6 !important;
             box-shadow: 0 0 0 1px #3b82f6 !important;
             background-color: rgba(255, 255, 255, 0.05) !important;
-        }
-
-        /* Hide Scrollbar */
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
         }
 
         .filled {
