--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -19,6 +19,7 @@
         rel="stylesheet" />
 
     <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
     <!-- Core UI per Toast (Protocollo V3) -->
     <script type="module" src="assets/js/ui-core.js?v=2.2"></script>
