--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master -->
+    <!-- Design System Master (Protocollo Comune V3.0) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
 
     <!-- CSS specifico per la lista scadenze -->
